# Menage

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: atlas.test.ts  atlas.ts  atlasfile.test.ts  atlasfile.ts  bridge.ts  doc.test.ts  doc.ts  form.ts  instructions.test.ts  instructions.ts  inventory.test.ts  inventory.ts  loupe.ts  main.ts  stage.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
